--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -212,7 +212,7 @@ Consent
     demonstrate the consent of the end-user according Article 8 (1) (b).
 
 3. End-users who have consented to the processing of electronic communications data
-    as set out in point (c) of Article 6(2) and points (a) and (b) of Article 6(3) shall be
+    as set out in point (c) of Article 6b and points (a) and (b) of Article 6a shall be
 	reminded of the possibility  to withdraw their consent at periodic
     intervals of [no longer than 12 months], as long as the processing continues,
 	unless the end-user requests not to receive such reminders.
@@ -242,40 +242,71 @@ Permitted processing of electronic communications data
 1. Providers of electronic communications networks and services shall be permitted to process
     electronic communications data only if:
 
-(a) it is necessary to achieve the transmission of the communication, for the duration
-    necessary for that purpose; or
+(a) it is necessary to achieve the transmission of the communication; or
 
 (b) it is necessary to maintain or restore the security of electronic communications
     networks and services, or detect technical faults and/or errors and/or security risks and/or
-    attacks in the transmission of electronic communications, for the duration necessary for that purpose.
+    attacks in the transmission of electronic communications.
 
 (c) it is necessary to detect or prevent security risks and/or attacks on end-users’
-    terminal equipment, for the duration necessary for that purpose;
+    terminal equipment;
 
-2. Without prejudice to paragraph 1, providers of electronic communications networks and
-    services shall be permitted to process electronic communications metadata only if:
+(d) it is necessary for compliance with a legal obligation to which the provider is subject
+    laid down by Union or Member State law in accordance with Article 11
 
-(a) it is necessary for the purposes of network management or network optimisation, and
-    for the duration necessary for that purpose,
-    provided that the purpose or purposes concerned could not be fulfilled by processing
-    information that is made anonymous,
-    or to meet technical quality of service requirements pursuant to
-    [Directive establishing the European Electronic Communications Code] or
-    Regulation (EU) 2015/2120^11 for the duration necessary for that purpose; or
+2. Electoronic communications data shall only be permitted to be processed for the
+    duration necessary for the specified purpose or purposes according to Articles 6 to 6c 
+    and if the specified purpose or purposes cannot be fulfilled by processing information
+    that is made anonymous.
+
+3. A third party acting on behalf of a provider of electronic communications network or
+    services may be permitted to process electronic communications data in
+    accordance with Articles 6 to 6c provided that the conditions laid
+    down in Article 28 of Regulation (EU) 2016/679 are met. 
+
+**Article 6a [previous art. 6(3)]**
+Permitted processing of electronic communications content 
+
+1. Without prejudice to Article (6)1, Providers of the electronic
+communications networks and services shall be permitted to process electronic
+communications content only: 
+
+(a) for the purpose of the provision of an service requested by an
+    end-user for purely individual use if the requesting end-user has given consent and
+    where such requested processing does not adversely affect fundamental rights and
+    interests of another person concerned; or
+
+(b) if all end-users concerned have given their consent to the processing of their electronic
+    communications content for one or more specified purposes
+
+2. Prior to the processing in accordance with point (b) of paragraph 1
+    the provider shall carry out an assessment of the impact of the envisaged
+    processing operations on the protection of electronic communications data and
+    consulted the supervisory authority. Article 36(2) and (3) of
+    Regulation (EU) 2016/679 shall apply to the consultation of the supervisory authority
+
+**Article 6b [previous art 6(2)]**
+Permitted processing of electronic communications metadata
+
+Without prejudice to Article (6)1, providers of electronic communications
+networks and services shall be permitted to process electronic communications
+metadata only if:
+
+(a) it is necessary for the purposes of network management or network optimisation,
+    or to meet quality of service requirements pursuant to Directive establishing the European Electronic
+    Communications Code or Regulation (EU) 2015/2120; or
 
 (b) it is necessary for calculating and billing interconnection payments or for the
-    performance of an electronic communications service contract to which the end-user is party, more in particular if for 
-    billing or if it is necessary for, detecting or stopping fraudulent, or abusive use of,
-    or subscription to, electronic communications services; or
+    performance of an electronic communications service contract to which the enduser is party,
+    in particular if necessary for billing or if it is necessary for detecting or stopping
+    fraudulent, or abusive use of, or subscription to, electronic communications services; or
 
-(c) the end-user concerned has given consent to the processing of 
-    communications metadata for one or more specified purposes, including for the
-    provision of services to such end-users, provided that the purpose or
-    purposes concerned could not be fulfilled by processing information that is made
-    anonymous; or
+(c) the end-user concerned has given consent to the processing of
+    communications metadata for one or more specified purposes; or
 
-(d) it is necessary to protect the vital interest of a natural person, in the case of emergency,
-    upon request of a competent authority, in accordance with Union or Member State law; or
+(d) it is necessary to protect the vital interest of a natural person, in the case of
+    emergency, upon request of a competent authority, in accordance with Union or
+    Member State law; or
 
 (f) it is necessary for statistical purposes, or for scientific research purposes, provided it is based on
     Union or Member State law which shall be proportionate to the aim pursued and
@@ -284,14 +315,18 @@ Permitted processing of electronic communications data
     electronic communications metadata under this point shall be done in accordance
     with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
     (EU) 2016/679.
-    
-2a. Where the processing for a purpose other than that for which the electronic
-    communications metadata have been collected under paragraphs 1 and 2 is not based on the end-user's consent
-    or on a Union or Member State law which constitutes a necessary and proportionate
-    measure in a democratic society to safeguard the objectives referred to in Article 11 ,
-    the provider shall, in order to ascertain whether processing for another purpose is
-    compatible with the purpose for which the electronic communications data are
-    initially collected, take into account, inter alia:
+
+**Article 6c [Previous art 6(2a)]**
+Compatible processing of electronic communications metadata
+
+1. Where the processing for a purpose other than that for which the electronic
+    communications metadata have been collected under Articles 6
+    and 6b is not based on the end-user's consent or on a Union or Member State law
+    which constitutes a necessary and proportionate measure in a democratic society to
+    safeguard the objectives referred to in Article 11 , the provider of electronic
+    communications networks and services shall, in order to ascertain whether processing
+    for another purpose is compatible with the purpose for which the electronic
+    communications metadata are initially collected, take into account, inter alia:
 
 (a) any link between the purposes for which the electronic communications metadata
     have been collected and the purposes of the intended further processing;
@@ -306,16 +341,18 @@ Permitted processing of electronic communications data
 
 (e) the existence of appropriate safeguards.
     
-Such processing, if considered compatible, may only take place, provided that:
-    - the processing could not be carried out by processing information that is made
-    anonymous, and electronic communications metadata is erased or made anonymous
-    as soon as it is no longer needed to fulfil the purpose, and
-    - the processing is limited to electronic communications metadata that is
-    pseudonymised,
-    - the electronic communications metadata is not used to determine the nature or
+2. Such processing, if considered compatible, may only take place, provided that:
+
+(a) electronic communications metadata is erased or made anonymous
+    as soon as it is no longer needed to fulfil the purpose,
+
+(b) the processing is limited to electronic communications metadata that is
+    pseudonymised, and
+
+(c) the electronic communications metadata is not used to determine the nature or
     characteristics of an end-user or to build a profile of an end-user.
 
-2aa. For the purposes of paragraph 2a, the providers of electronic
+3. For the purposes of this Article, the providers of electronic
     communications networks and services shall:
 
 (b) not share such data with third parties, unless it is made anonymous;
@@ -326,38 +363,16 @@ Such processing, if considered compatible, may only take place, provided that:
     prior consultation of the supervisory authority in accordance with Article 36(1)
     to (3) of Regulation (EU) 2016/679; and
 
-(d) inform the end-user of specific processing on the basis of paragraph 2a and
+(d) inform the end-user of specific processing on the basis of this Article and
     of the right to object to such processing free of charge, at any time, and in an
     easy and effective manner. If the end-user objects, the electronic communications
     metadata shall no longer be processed for such purposes.
-
-3. Without prejudice to paragraph 1, providers of the electronic communications networks and
-    services shall be permitted to process electronic communications content only:
-
-(aa) for the purpose of the provision of an explicitly requested services by an end-user for
-    purely individual use if the requesting end-user has given consent and where such
-    requested processing does not adversely affect fundamental rights and interest of
-    another person concerned and does not exceed the duration necessary for the
-    provision of the requested services and is limited to that purpose only; or
-
-(b) if all end-users concerned have given their consent to the processing of their
-    electronic communications content for one or more specified purposes that cannot be
-    fulfilled by processing information that is made anonymous, and the provider has prior to the
-    processing carried out an assessment of the impact of the envisaged processing
-    operations on the protection of electronic communications data and
-    consulted the supervisory authority. Article 36(2) and (3) of Regulation
-    (EU) 2016/679 shall apply to the consultation of the supervisory authority.
-
-4. A third party on behalf of a provider of electronic communications network or
-    services shall be permitted to process electronic communications data in accordance
-    with paragraphs 1 to 3 provided that conditions laid down in Article 28 of Regulation
-    (EU) 2016/679 are met. 
 
 ```
 Article 7
 Storage and erasure of electronic communications data
 ```
-1. Without prejudice to points (b) and (c) of Article 6(1) and of Article 6(3),
+1. Without prejudice to points (b), (c) and (d) of Article 6(1) and of Article 6a,
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
     communication content by the intended recipient or recipients. Such data may be recorded, stored or otherwise
@@ -365,15 +380,19 @@ Storage and erasure of electronic communications data
     record, store or otherwise process such data. Such processing shall take place in
     accordance with Regulation (EU) 2016/679.
 
-2. Without prejudice to points (b) and (c) of Article 6(1), points (a), (c), (d) and (f) of Article 6(2) and Article 6(2a),
+2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (a), (c), (d) and (f) of Article 6b and Article 6c,
     the provider of the electronic communications service shall erase electronic
     communications metadata or make that data anonymous when it is no longer needed
     for the purpose of the transmission of a communication.
 
 3. Where the processing of electronic communications metadata takes place for the
-    purpose of billing in accordance with point (b) of Article 6(2), the relevant metadata
+    purpose of billing in accordance with point (b) of Article 6b, the relevant metadata
     may be kept until the end of the period during which a bill may lawfully be
     challenged or a payment may be pursued in accordance with national law.
+
+4. Union or Member state law may provide in accordance with Article 11 that the
+    electronic communications metadata is retained for a limited period that is longer
+    than the period set out in this Article .
 
 ```
 Article 8
@@ -455,11 +474,6 @@ Restrictions
     more of the general public interests referred to in Article 23(1)(c) to (e), (i) and (j) of
     Regulation (EU) 2016/679 or a monitoring, inspection or regulatory function
     connected to the exercise of official authority for such interests. 
-    To that end and under the same conditions, Union
-    or Member State law may, inter alia, impose an obligation on the providers of
-    electronic communication services to retain electronic communications data to
-    safeguard one or more of the general public interests referred to in this paragraph,
-    for a limited period of time longer than the one provided for in Article 7.
 
 1a. Article 23(2) of Regulation (EU) 2016/679 shall apply to any legislative measures
     referred to in paragraph 1.
@@ -510,7 +524,7 @@ Presentation and restriction of calling and connected line identification
 4. Where presentation of calling or connected line identification is offered, providers of
     number-based interpersonal communications services shall
     provide information to the public regarding the options set out in paragraph 1
-    and the exceptions set forth in Article 13(1), (1a) and (2). 
+    and the exceptions set forth in Article 13. 
 
 ```
 Article 13
@@ -543,7 +557,7 @@ to emergency communications
 
 ```
 Article 14
-Incoming call blocking
+Unwanted, malicious or nuisance calls
 ```
 1. Providers of number-based interpersonal communications services shall
     deploy state of the art measures to limit the reception of unwanted, malicious or nuisance calls by end-users.
@@ -728,7 +742,7 @@ European Data Protection Board
     moment in time of receipt of electronic communictions content;
 
 (db) issue guidelines, recommendations and best practices in accordance with point (b) of
-    this paragraph on the provision of consent in the context of Article 6 and 8 of this
+    this paragraph on the provision of consent in the context of Articles 6 to 6b and 8 of this
     Regulation by end-users who are legal persons or in an employment relationship;
 
 (e) [provide the Commission with an opinion on the icons referred to in paragraph 3 of
@@ -941,9 +955,33 @@ Entry into force and application
 1. This Regulation shall enter into force on the twentieth day following that of its
     publication in the _Official Journal of the European Union_.
 
-2. It shall apply from [24 months from the date of entry into force of this
-    Regulation].
+2. Without prejudice to paragraph 3, this Regulation shall apply from 
+    [24 months from the date of entry into force of this Regulation].
 
+3. This Regulation shall not apply to the processing of electronic communications data
+    by a provider of number-independent interpersonal communications services for the
+    sole purpose of detecting, deleting and reporting material constituting child
+    pornography as defined in Article 2(c) of Directive 2011/93/EU, if:
+
+(a) that provider started such processing prior to the date set out in paragraph 1.
+
+(b) the technology used meets all of the following characteristics:
+
+    (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
+    attached to electronic communications for the sole purpose of comparing that
+    hash with a database containing hashes of material previously reliably identified
+    as constituting child pornography;
+
+    (ii) it erases non-matching hashes of material attached to electronic
+    communications immediately after comparison with the database;
+
+    (iii) it limits to the maximum extent technically possible the rate of erroneous
+    detection of material constituting child pornography to at most 1 in 50 billion;
+
+    (iv) it does not store electronic communications data, except in the cases where
+    material constituting child pornography has been detected by virtue of a hash.
+
+4. Paragraph 3 shall cease to apply on [xx].
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
