--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -56,8 +56,8 @@ Material Scope
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
 
-(e) electronic communications content processed by the end-users concerned after receipt, or by a
-    third party entrusted by them to record, store or otherwise process their electronic communications content;
+(e) electronic communications content by a third party entrusted by the end-user to record,
+    store or otherwise process their electronic communications content;
 
 (f) electronic communications metadata processed by the end-users concerned or by a
     third party entrusted by them to record, store or otherwise process their electronic
@@ -92,10 +92,10 @@ Territorial scope and representative
     in the Union.
 
 2. Where the provider of an electronic communications servicee, the provider of a publicly
-    available directory or the provider of software enabling electronic communications or
+    available directory or
     a person using electronic communications services to send direct
-    marketing communications or makes use of processing and storage capabilities or
-    collects information processed by or emitted by or stored in the end-users’ terminal
+    marketing communications, or a person using processing and storage capabilities or
+    collecting information processed by or emitted by or stored in the end-users’ terminal
     equipment is not established in the Union it shall designate in writing a representative in the Union.
 
 2a. The requirements laid down in paragraph 2 shall not apply if activities listed in
@@ -367,7 +367,30 @@ Compatible processing of electronic communications metadata
     of the right to object to such processing free of charge, at any time, and in an
     easy and effective manner. If the end-user objects, the electronic communications
     metadata shall no longer be processed for such purposes.
+    
+**Article 6d [NEW]**
+Processing of electronic communications data for the purpose of detecting, deleting and
+reporting material constituting child pornography
 
+1. Without prejudice to Article (6)1, providers of number-independent interpersonal
+    communications services shall be permitted to process electronic communication data
+    for the sole purpose of detecting, deleting and reporting material constituting child
+    pornography as defined in Article 2(c) of Directive 2011/93/EU, if the technology used
+    meets all of the following characteristics:
+
+    (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
+        attached to electronic communications for the sole purpose of comparing that
+        hash with a database containing hashes of material previously reliably identified
+        as constituting child pornography;
+
+    (ii) it erases non-matching hashes of material attached to electronic
+        communications immediately after comparison with the database;
+
+    (iii) it limits the rate of erroneous detection of material constituting child
+        pornography to at most 1 in 50 billion;
+
+    (iv) it does not store electronic communications data, except in the cases where
+        material constituting child pornography has been detected by virtue of a hash.
 ```
 Article 7
 Storage and erasure of electronic communications data
