--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -305,13 +305,12 @@ metadata only if:
     communications metadata for one or more specified purposes; or
 
 (d) it is necessary to protect the vital interest of a natural person, in the case of
-    emergency, upon request of a competent authority, in accordance with Union or
+    emergency, normally upon request of a public authority, in accordance with Union or
     Member State law; or
 
-(f) it is necessary for statistical purposes, or for scientific research purposes, provided it is based on
-    Union or Member State law which shall be proportionate to the aim pursued and
-    provide for specific measures, including encryption and pseudonymisation, to
-    safeguard fundamental rights and the interest of the end-users. Processing of
+(f) it is necessary for statistical purposes, or for scientific research purposes, provided it is subject to
+    appropriate safeguards, including encryption and pseudonymisation, to
+    protect fundamental rights and the interest of the end-users. Processing of
     electronic communications metadata under this point shall be done in accordance
     with paragraph 6 of Article 21 and paragraphs 1, 2 and 4 of Article 89 of Regulation
     (EU) 2016/679.
@@ -339,7 +338,7 @@ Compatible processing of electronic communications metadata
 
 (d) the possible consequences of the intended further processing for end-users;
 
-(e) the existence of appropriate safeguards.
+(e) the existence of appropriate safeguards, such as pseudonymisation.
     
 2. Such processing, if considered compatible, may only take place, provided that:
 
@@ -375,7 +374,7 @@ reporting material constituting child pornography
 1. Without prejudice to Article (6)1, providers of number-independent interpersonal
     communications services shall be permitted to process electronic communication data
     for the sole purpose of detecting, deleting and reporting material constituting child
-    pornography as defined in Article 2(c) of Directive 2011/93/EU, if the technology used
+    pornography as defined in Article 2(c) of Directive 2011/93/EU, if the processing
     meets all of the following characteristics:
 
     (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
@@ -383,14 +382,25 @@ reporting material constituting child pornography
         hash with a database containing hashes of material previously reliably identified
         as constituting child pornography;
 
-    (ii) it erases non-matching hashes of material attached to electronic
-        communications immediately after comparison with the database;
+    (ii) electronic communications data and hashes of material attached to electronic
+        communications are erased immediately after comparison with the database
+        except in the cases where material constituting child pornography has been detected by virtue of a hash;;
 
-    (iii) it limits the rate of erroneous detection of material constituting child
+    (iii) it limits the probability of erroneous detection of material constituting child
         pornography to at most 1 in 50 billion;
 
-    (iv) it does not store electronic communications data, except in the cases where
-        material constituting child pornography has been detected by virtue of a hash.
+2. The provider of number-independent interpersonal communications services
+    shall, prior to processing, carry out an assessment of the impact and consult the
+    supervisory authority, in accordance with Article 35 and 36 of Regulation (EU)
+    2016/679. The assessment of impact shall include a description of the processing
+    activities concerning both automatic and manual processing of the data,
+    including description of possible algorithms or databases used for the
+    processing and means to limit the rate of erroneous detection of material
+    constituting child pornography and of the security measures, including
+    limitation of personnel authorised to access electronic communications data, set
+    up to protect end-users not involved in the communication of material
+    consituting child pornography, and to protect the consulted content.]
+
 ```
 Article 7
 Storage and erasure of electronic communications data
@@ -435,7 +445,7 @@ Protection of end-users' terminal equipment information
 
 (d) it is necessary for audience measuring, provided that such measurement is
     carried out by the provider of the information society service requested by the end-
-    user or by a third party on behalf of the provider of the information society service 
+    user or by a third party on behalf of one or more providers of the information society service 
     provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met; or
 
 (da) it is necessary to maintain or restore the security of information society services,
@@ -465,6 +475,8 @@ Protection of end-users' terminal equipment information
 (c) it is necessary for the purpose of statistical counting that is limited in time and space
     to the extent necessary for this purpose and the data is made anonymous or erased as
     soon as it is no longer needed for this purpose.
+
+(d) it is necessary for providing a service requested by the end-user.
 
 2a. For the purpose of paragraph 2 points (b) and (c), a clear and prominent notice shall
     displayed informing of, at least, the modalities of the
@@ -981,30 +993,25 @@ Entry into force and application
 2. Without prejudice to paragraph 3, this Regulation shall apply from 
     [24 months from the date of entry into force of this Regulation].
 
-3. This Regulation shall not apply to the processing of electronic communications data
+[3. Until other specific union legislation on detection, deletion or reporting material
+    constituting child pornography has entered into force, this Regulation shall not apply to the processing of electronic communications data
     by a provider of number-independent interpersonal communications services for the
-    sole purpose of detecting, deleting and reporting material constituting child
+    sole purpose of detecting, deleting or reporting material constituting child
     pornography as defined in Article 2(c) of Directive 2011/93/EU, if:
 
-(a) that provider started such processing prior to the date set out in paragraph 1.
-
-(b) the technology used meets all of the following characteristics:
+    the processing meets all of the following characteristics:
 
     (i) it creates a unique, non-reconvertible digital signature (“hash”) of material
     attached to electronic communications for the sole purpose of comparing that
     hash with a database containing hashes of material previously reliably identified
     as constituting child pornography;
 
-    (ii) it erases non-matching hashes of material attached to electronic
-    communications immediately after comparison with the database;
+    (ii) glectronic communications data and hashes of material attached to electronic
+    communications are erased immediately after comparison with the database, except 
+    in the cases where material constituting child pornography has been detected by virtue of a hash;
 
-    (iii) it limits to the maximum extent technically possible the rate of erroneous
-    detection of material constituting child pornography to at most 1 in 50 billion;
-
-    (iv) it does not store electronic communications data, except in the cases where
-    material constituting child pornography has been detected by virtue of a hash.
-
-4. Paragraph 3 shall cease to apply on [xx].
+    (iii) it limits the probability the rate of erroneous
+    detection of material constituting child pornography to at most 1 in 50 billion;]
 
 This Regulation shall be binding in its entirety and directly applicable in all Member States.
 
