--- a/2017-0003 (COD).md
+++ b/2017-0003 (COD).md
@@ -43,9 +43,8 @@ Material Scope
 
 2. This Regulation does not apply to:
 
-(a) activities which fall outside the scope of Union law;
-
-(aa) activities concerning national security and defence;
+(a) activities which fall outside the scope of Union law and in any event
+    activities concerning national security and defence;
 
 (b) activities of the Member States which fall within the scope of Chapter 2 of Title V of
     the Treaty on European Union;
@@ -56,12 +55,12 @@ Material Scope
     detection or prosecution of criminal offences or the execution of criminal penalties,
     including the safeguarding against and the prevention of threats to public security;
 
-(e) electronic communications content by a third party entrusted by the end-user to record,
-    store or otherwise process their electronic communications content;
+(e) electronic communications data after receipt processed by the end-user
+    concerned, or by a third party entrusted by that end-user;
 
-(f) electronic communications metadata processed by the end-users concerned or by a
-    third party entrusted by them to record, store or otherwise process their electronic
-    communications metadata.
+(f) electronic communications data before receipt processed by the end-users concerned or by a
+    third party entrusted by the end-user for the purpose of ensuring network and 
+    information security.
 
 3. The processing of electronic communications data by the Union institutions, bodies,
     offices and agencies is governed by Regulation (EU) 2018/1725
@@ -272,7 +271,7 @@ communications networks and services shall be permitted to process electronic
 communications content only: 
 
 (a) for the purpose of the provision of an service requested by an
-    end-user for purely individual use if the requesting end-user has given consent and
+    end-user for individual use if the requesting end-user has given consent and
     where such requested processing does not adversely affect fundamental rights and
     interests of another person concerned; or
 
@@ -305,10 +304,11 @@ metadata only if:
     communications metadata for one or more specified purposes; or
 
 (d) it is necessary to protect the vital interest of a natural person, in the case of
-    emergency, normally upon request of a public authority, in accordance with Union or
+    emergency, in general upon request of a public authority, in accordance with Union or
     Member State law; or
 
-(f) it is necessary for statistical purposes, or for scientific research purposes, provided it is subject to
+(f) it is necessary for statistical purposes, or for scientific research purposes, provided 
+    it is in accordance with Union or Member State law and subject to
     appropriate safeguards, including encryption and pseudonymisation, to
     protect fundamental rights and the interest of the end-users. Processing of
     electronic communications metadata under this point shall be done in accordance
@@ -322,7 +322,7 @@ Compatible processing of electronic communications metadata
     communications metadata have been collected under Articles 6
     and 6b is not based on the end-user's consent or on a Union or Member State law
     which constitutes a necessary and proportionate measure in a democratic society to
-    safeguard the objectives referred to in Article 11 , the provider of electronic
+    safeguard the objectives referred to in Article 11, the provider of electronic
     communications networks and services shall, in order to ascertain whether processing
     for another purpose is compatible with the purpose for which the electronic
     communications metadata are initially collected, take into account, inter alia:
@@ -333,12 +333,13 @@ Compatible processing of electronic communications metadata
 (b) the context in which the electronic communications metadata have been collected, in
     particular regarding the relationship between end-users concerned and the provider;
 
-(c) the nature of the electronic communications metadata, in particular where such data
+(c) the nature of the electronic communications metadata as well as the modalities of the
+    intended processing, in particular where such data or the intended processing
     could reveal categories of data, pursuant to Article 9 or 10 of Regulation (EU) 2016/679;
 
 (d) the possible consequences of the intended further processing for end-users;
 
-(e) the existence of appropriate safeguards, such as pseudonymisation.
+(e) the existence of appropriate safeguards, such as pseudonymisation and encryption.
     
 2. Such processing, if considered compatible, may only take place, provided that:
 
@@ -408,10 +409,11 @@ Storage and erasure of electronic communications data
 1. Without prejudice to points (b), (c) and (d) of Article 6(1) and of Article 6a,
     the provider of the electronic communications service shall erase electronic
     communications content or make that data anonymous after receipt of electronic
-    communication content by the intended recipient or recipients. Such data may be recorded, stored or otherwise
-    processeed by the end-users after receipt, or by a third party entrusted by them to
-    record, store or otherwise process such data. Such processing shall take place in
-    accordance with Regulation (EU) 2016/679.
+    communication content by the intended recipient or recipients. Upon the end-user's
+    explicit request the provider of the electronic communications service may store that
+    end-user's electronic communications content as an integral part of the service as
+    long as requested by the end-user. Such data may be processed in accordance with
+    Article 6 and 6a.
 
 2. Without prejudice to points (b), (c) and (d) of Article 6(1), points (a), (c), (d) and (f) of Article 6b and Article 6c,
     the provider of the electronic communications service shall erase electronic
@@ -446,7 +448,8 @@ Protection of end-users' terminal equipment information
 (d) it is necessary for audience measuring, provided that such measurement is
     carried out by the provider of the information society service requested by the end-
     user or by a third party on behalf of one or more providers of the information society service 
-    provided that conditions laid down in Article 28 of Regulation (EU) 2016/679 are met; or
+    provided that conditions laid down in Article 28, or where applicable Article 26,
+    of Regulation (EU) 2016/679 are met; or
 
 (da) it is necessary to maintain or restore the security of information society services,
     prevent fraud or detect technical faults for the duration necessary for that purpose;
@@ -631,7 +634,7 @@ Publicly available directories
 
 2. The providers of number-based interpersonal communications services shall inform end-users who are
     natural persons whose personal data are in the directory of any search
-    function that is not based on name in the directory and obtain the additional 
+    function that is not based on name or number in the directory and obtain the additional 
     consent of end-users’ before enabling such search functions related to their own data.
 
 3. The providers of number-based interpersonal communications services shall provide end-users that are legal
@@ -729,14 +732,13 @@ Supervisory authorities
 ```
 0. Each Member State shall provide for one or more independent public authorities
     meeting the requirements set out in Articles 51 to 54 of Regulation (EU) 2016/679 to
-    be responsible for monitoring the application of this Regulation (‘supervisory
-    authorities’).
+    be responsible for monitoring the application of this Regulation.
 
     Member States may entrust the monitoring of the application of Articles 12 to 16 to
     the supervisory authority or authorities referred to in the previous subparagraph or
-    to another authority or authorities having the appropriate expertise.
+    to another supervisory authority or authorities having the appropriate expertise.
 
-1ab. The supervisory authorities referred to in paragraph 0 shall have
+1ab. The supervisory authorities shall have
     investigative and corrective powers, including the power to impose administrative
     fines pursuant to article 23.
 
@@ -744,7 +746,7 @@ Supervisory authorities
     application of this Regulation in a Member State, such authorities shall cooperate
     with each other. 
 
-2. Where the supervisory authorities referred to in paragraph 0 are not the 
+2. Where the supervisory authorities are not the 
     supervisory authorities responsible for monitoring the application of Regulation 
     (EU) 2016/679, they shall cooperate with the latter and,
     whenever appropriate with national regulatory authorities established pursuant to the
@@ -817,8 +819,8 @@ Each supervisory authority shall contribute to the consistent application of thi
 Article 21
 Remedies
 ```
-1. Without prejudice to any other administrative or judicial remedy, every end-user of
-    electronic communications services shall have the right to an effective judicial remedy in
+1. Without prejudice to any other administrative or judicial remedy, every end-user 
+    services shall have the right to an effective judicial remedy in
     relation to any infringement of his or her rights under this Regulation, the right to
     lodge a complaint with a supervisory authority and the right to an effective judicial
     remedy against any decision of a supervisory authority. 
@@ -834,7 +836,7 @@ Remedies
 Article 22
 Right to compensation and liability
 ```
-Any end-user of electronic communications services who has suffered material or non-
+Any end-user who has suffered material or non-
 material damage as a result of an infringement of this Regulation shall have the right to
 receive compensation from the infringer for the damage suffered in accordance with
 Article 82 of Regulation (EU) 2016/679.
